# FIghtClubCppCMAKE

./: CMakeLists.txt  conanfile.txt  conanprofile.txt
.github/workflows/: build-linux.yml  build-windows.yml  cmake-single-platform.yml  linux-build.yml  windows-build.yml
Automation/: automation.py
Source/: main.cpp
Source/ChuckNorrisJokes/: main.cpp
Source/Flecs/: main.cpp
Source/Game/: API.h  Character.cpp  Character.h  Game.cpp  Game.h  Weapon.cpp  Weapon.h
Source/Tests/: main.cpp
Source/Utils/: Math.h
